feat: assets API and UI
